[gd_scene load_steps=21 format=3 uid="uid://dgfe7e57qd5f5"]

[ext_resource type="Script" path="res://script/enemy/base_enemy.gd" id="1_464hi"]
[ext_resource type="Texture2D" uid="uid://dui61bq2rw3g2" path="res://assets/enemy/enemy.png" id="2_4r781"]
[ext_resource type="PackedScene" uid="uid://dk7f44oxkb2gu" path="res://scene/HealthComponent/health_component.tscn" id="2_pjx5m"]
[ext_resource type="PackedScene" uid="uid://b7bc18pmkhcsf" path="res://scene/viadDrogComponent/viad_Drog_manager.tscn" id="3_q6a04"]
[ext_resource type="PackedScene" uid="uid://c55neqxgi2udr" path="res://scene/experience/experience.tscn" id="4_2ud7m"]
[ext_resource type="PackedScene" uid="uid://cuydb4mqlbei8" path="res://scene/DeathComponent/death_component.tscn" id="5_4bidd"]
[ext_resource type="PackedScene" uid="uid://22luwaoj0bqh" path="res://scene/enemey/hurtbox/hurtbox.tscn" id="5_b0xk6"]
[ext_resource type="Shader" path="res://scene/hitFlashComponment/hit_flash_componment.gdshader" id="6_bumuv"]
[ext_resource type="PackedScene" uid="uid://n5qbipb437nb" path="res://scene/hitFlashComponment/hit_flash_componment.tscn" id="7_ycpbl"]
[ext_resource type="Material" uid="uid://d3xdr4x2e54gk" path="res://scene/hitFlashComponment/hit_flash_componment_material.tres" id="9_nkum0"]
[ext_resource type="PackedScene" uid="uid://dpixlnslxxg8v" path="res://scene/RandomStreamPlayer2d/random_stream_player_2d.tscn" id="11_snaom"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qgdv4"]
resource_local_to_scene = true
shader = ExtResource("6_bumuv")
shader_parameter/lerp_persent = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iinvl"]
bg_color = Color(0.87451, 0.478431, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hpmi"]
bg_color = Color(0.711071, 0, 0.0743043, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.87451, 0.478431, 0.301961, 1)
shadow_color = Color(0.759542, 0.151702, 0.283725, 0.6)

[sub_resource type="CircleShape2D" id="CircleShape2D_cn0a4"]
radius = 14.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_ns7tj"]
radius = 6.0

[sub_resource type="Animation" id="Animation_mokcr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("viAble/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bcwka"]
resource_name = "die"

[sub_resource type="Animation" id="Animation_f5elf"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("viAble/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bvh5n"]
_data = {
"RESET": SubResource("Animation_mokcr"),
"die": SubResource("Animation_bcwka"),
"walk": SubResource("Animation_f5elf")
}

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 6
collision_mask = 6
motion_mode = 1
script = ExtResource("1_464hi")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("healthBar") instance=ExtResource("2_pjx5m")]
healthBar = NodePath("../healthBar")

[node name="ViadDrogComponent" parent="." node_paths=PackedStringArray("healthcomponent") instance=ExtResource("3_q6a04")]
viad_scene = ExtResource("4_2ud7m")
healthcomponent = NodePath("../HealthComponent")

[node name="hitFlashComponment" parent="." node_paths=PackedStringArray("healthComponment", "sprite") instance=ExtResource("7_ycpbl")]
healthComponment = NodePath("../HealthComponent")
sprite = NodePath("../viAble/Sprite2D")
hit_flash_componment_material = SubResource("ShaderMaterial_qgdv4")

[node name="healthBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -23.0
offset_right = 16.0
offset_bottom = -17.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_iinvl")
theme_override_styles/fill = SubResource("StyleBoxFlat_3hpmi")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health") instance=ExtResource("5_4bidd")]
health = NodePath("../HealthComponent")
texture = ExtResource("2_4r781")

[node name="hurtbox" parent="." node_paths=PackedStringArray("helathbox") instance=ExtResource("5_b0xk6")]
y_sort_enabled = true
disable_mode = 2
helathbox = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_cn0a4")

[node name="viAble" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="viAble"]
material = ExtResource("9_nkum0")
texture = ExtResource("2_4r781")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_ns7tj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bvh5n")
}
autoplay = "walk"

[node name="RandomStreamPlayer2d" parent="." instance=ExtResource("11_snaom")]

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]
